# TheNoiseMustFlow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bump-version.yml  tests.yml
configs/: default_UNet.yaml  default_VAE.yaml
examples/MNIST/: MNIST.py  MNIST_UNet.yaml  MNIST_VAE.yaml  sample.ipynb  train_mnist.py
examples/MNIST/checkpoints/first_attempt/VAE/: events.out.tfevents.1751461549.computer.41318.0  events.out.tfevents.1751466584.computer.13383.0
examples/MNIST/checkpoints/first_attempt/diffusion/: events.out.tfevents.1751465272.computer.8309.0  events.out.tfevents.1751467516.computer.13383.1
examples/MNIST/checkpoints/pretrained_VAE/diffusion/: events.out.tfevents.1751558068.computer.72563.0
notebooks/: __b__Samplers.ipynb
src/TheNoiseMustFlow/core/: models.py  samplers.py  schedulers.py
src/TheNoiseMustFlow/core/basic_components/: basic_blocks.py  decoder_blocks.py  encoder_blocks.py  encodings.py  functional_blocks.py
src/TheNoiseMustFlow/tests/: test_core.py  test_scripts.py  test_trainer.py  test_ui.py  test_utils.py
src/TheNoiseMustFlow/trainer/: custom_lr_schedulers.py  losses.py  metrics.py  train.py
src/core/: building_blocks.py  models.py  samplers.py  schedule.py  schedulers.py
src/core/basic_components/: basic_blocks.py  decoder_blocks.py  encoder_blocks.py  encodings.py  functional_blocks.py
src/tests/: test_core.py  test_trainer.py
src/the_noise_must_flow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trainer/: custom_lr_schedulers.py  losses.py  train.py
