[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-noise-must-flow"
version = "0.9.0"
description = "A toolkit for understanding, training, and visualizing diffusion models."
authors = [
    { name = "Valentin Delchevalerie", email = "vdelchevalerie@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch~=2.7.0",
    "torchmetrics",
    "torchvision",
    "matplotlib",
    "tqdm",
    "tensorboard",
    "ipykernel",
    "pytest",
    "commitizen"
]

[project.urls]
Homepage = "https://github.com/ValDelch/TheNoiseMustFlow"
Repository = "https://github.com/ValDelch/TheNoiseMustFlow"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.9.0"
tag_format = "v$version"
major_version_zero = false
version_files = ["pyproject.toml:^version"]